--- a/index.html
+++ b/index.html
@@ -4,9 +4,152 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Lori's Portfolio</title>
+  <link rel="stylesheet" type = "text/css" href="index.css">
+<script src="https://use.fontawesome.com/80af88cb3b.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body>
-  <h1>This is just a placeholder for the future site I'm in the process of building</h1>
-</body>
+<body data-spy="scroll" data-offset"50">
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+           <div class="navbar-header">
+             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsemenu" aria-expanded="false">
+            <span class="sr-only">Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+                </button>
+             <a class="navbar-brand" href="#">LORI</a>
+           </div>
+    <div class="collapse navbar-collapse" id="collapsemenu">
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
+    </div>
+         </div>
+
+      </nav>
+
+  <!--/about section-->
+    <div class="container-fluid">
+  <section id="about">
+          <div class="container">
+            <div class="page-header">
+                  <div class="col-sm-7">
+                    <h2 class="section-heading">Meet Lori</h2>
+                      <h3>I am currently working as a teacher, but I am ready to step out of my classroom and take on the world of coding. Computers have always been a passion of mine. I am self taught (in the beginning stage), and I believe myself to be somewhat of a Googling expert!</h3>
+                    <h3>I have completed this portfolio as an assignment for  <a href="https://www.freecodecamp.com">FreeCodeCamp.</a> I have learned a lot in just a few weeks, and I plan to develop my skills even further, so that one day I may land a job as a front end developer.</h3>
+                    <h3>Thanks for stopping by. Please check back, as this site is a work in progress.</a></h3>
+
+            </div>
+                    <div class="col-sm-5">
+
+                      <img src="http://gdurl.com/fu1M" class="img-responsive img-thumbnail img-circle photo" alt="">
+                   </div>
+            </div>
+    </div>
+
+      </section>
+  <br>
+                                   <!--Potfolio section-->
+  <section id="portfolio">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                    <br>
+                    <br>
+                      <h1 class="section-heading">Portfolio</h1>
+                     <hr>
+            <br>
+                      <h3 class="text-muted">I am just beginning my coding journey. This is where I will store all my work as it is completed.</h3>
+    <br>
+                    <br>
+    </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 col-sm-6 sample">
+
+                    <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+
+     </div>
+
+                <div class="col-md-4 col-sm-6 sample">
+   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                </div>
+                <div class="col-md-4 col-sm-6 sample">
+   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                 </div>
+                 <div class="col-md-4 col-sm-6 sample">
+   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                  </div>
+                  <div class="col-md-4 col-sm-6 sample">
+   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                  </div>
+                  <div class="col-md-4 col-sm-6 sample">
+   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                  </div>
+              </div>
+    </div>
+
+      </section>
+
+
+  <section id="contact">
+      <div class="container">
+        <br>
+        <br>
+        <br>
+       <div class="text-center">
+      <button class="btn btn-primary btn-lg">Let's Chat</button>
+         </button> </div>
+    </div>
+     <br>
+        <br>
+        <hr class="hr2">
+        <br>
+        <br>
+        <div class="row">
+          <div class="col-xs-12 col-md-12 text-center">
+
+          <ul class="list-inline social-buttons">
+            <li><a href="mailto:inbox4lori@gmail.com"><i class="fa fa-envelope-open fa-4x"></i></a></li>
+             <li><a href="javascript:void(0);"><i class="fa fa-twitter fa-4x"></i></a></li>
+
+             <li><a href="javascript:void(0);"><i class="fa fa-facebook fa-4x"></i></a></li>
+
+             <li><a href="javascript:void(0);"><i class="fa fa-linkedin fa-4x"></i></a></li>
+
+
+          </ul>
+          </div>
+          </div>
+    </div>
+          </section>
+          <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+          <script src = "https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script
+<script   type = "text/javascript" src ="index.js"/></script>
+
+  </body>
+
+  <footer class="end">
+    <div class="container">
+
+    <br>
+    <br>
+    <hr>
+    <br>
+
+      <h1 class="text-center">&copy This website was made with <i class="fa fa-google"></i> and <i class="fa fa-free-code-camp"></i> and lots of <i class="fa fa-heart"></i> by Lori</h1>
+      <br>
+      <br>
+      <hr>
+      <br>
+
+      </div>
+      </div>
+      </footer>
 </html>
