added weather app

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
      </div>
 
                 <div class="col-md-4 col-sm-6 sample">
-   <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+   <a href="https://elledubyou.github.io/Weather/"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
                 </div>
                 <div class="col-md-4 col-sm-6 sample">
    <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
