--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="row">
                 <div class="col-md-4 col-sm-6 sample">
 
-                    <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                    <a href="https://elledubyou.github.io/quote-machine/" target="_blank"><img src="images/quote.png" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
 
      </div>
 
