--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
               <div class="row">
                 <div class="col-md-4 col-sm-6 sample">
 
-                    <a href="https://elledubyou.github.io/quote-machine/" target="_blank"><img src="images/quote.png" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+                    <a href="https://elledubyou.github.io/quote-machine/" target="_blank"><img src="images/quote.png" class="img-responsive img-thumbnail" alt="quote-machine"></a>
 
      </div>
 
                 <div class="col-md-4 col-sm-6 sample">
-   <a href="https://elledubyou.github.io/weather/" target="_blank"><img src="images/local-weather.png" class="img-responsive img-thumbnail"></a>
+   <a href="https://elledubyou.github.io/weather/" target="_blank"><img src="images/local-weather.png" class="img-responsive img-thumbnail" alt="weather app"></a>
                 </div>
                 <div class="col-md-4 col-sm-6 sample">
    <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
