added alt text to js quiz

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
    <a href="https://elledubyou.github.io/weather/" target="_blank"><img src="images/local-weather.png" class="img-responsive img-thumbnail" alt="weather app"></a>
                 </div>
                 <div class="col-md-4 col-sm-6 sample">
-   <a href="https://elledubyou.github.io/simple-javascript-quiz/"><img src="images/javascript quiz.png" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
+   <a href="https://elledubyou.github.io/simple-javascript-quiz target="_blank"/"><img src="images/javascript quiz.png" class="img-responsive img-thumbnail" alt=" simple javascript quiz"></a>
                  </div>
                  <div class="col-md-4 col-sm-6 sample">
    <a href="javascript:void(0);"><img src="http://gdurl.com/Qxot" class="img-responsive img-thumbnail" alt="" title = "Please check back for updates!"></a>
